Fix asset paths in forms for GitHub Pages compatibility

--- a/airbnb.html
+++ b/airbnb.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Request Airbnb Booking | Diaspora Connect</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/form.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/form.css">
 </head>
 <body>
     <header>
-        <img src="/assets/SS2.png" alt="Diaspora Connect Company Logo" height="44" style="display:block;margin:0 auto 0.5rem auto;">
+        <img src="assets/SS2.png" alt="Diaspora Connect Company Logo" height="44" style="display:block;margin:0 auto 0.5rem auto;">
         <h1>Request Airbnb Booking</h1>
     </header>
     <main>
@@ -38,7 +38,7 @@
             <button type="submit" class="service-btn">Send Request</button>
         </form>
         <div id="thankYouMsg" class="thankyou-card" style="display:none;">
-            <img src="/assets/SS5.png" alt="Diaspora Connect Logo" style="display:block;margin:0 auto 2rem auto;max-width:180px;width:40vw;">
+            <img src="assets/SS5.png" alt="Diaspora Connect Logo" style="display:block;margin:0 auto 2rem auto;max-width:180px;width:40vw;">
             <h2 style="font-size:2.2rem;color:#2b1055;font-weight:900;margin-bottom:1.2rem;">Thank you for your request!</h2>
             <p style="font-size:1.25rem;color:#00695c;font-weight:600;">We have received your details and will reach out to you in a few minutes.</p>
         </div>
