--- a/index.html
+++ b/index.html
@@ -96,158 +96,117 @@
     <main>
         <section id="services" class="services-section">
             <h2 class="section-title">Our Premium Services</h2>
+            <p class="services-intro">
+                Are you a Kenyan living abroad? We're your trusted team on the ground in Kenya—handling your errands, supporting your family, and making life easier while you focus on your journey abroad. Here's how we can help you, personally:
+            </p>
             <div class="services-grid animated">
-                <!-- 2. Legal & Consular Services -->
                 <div class="service-card">
                     <div class="service-icon"></div>
-                    <h3>Legal Assistance</h3>
-                    <p>Land, inheritance, contracts, immigration, and more.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <h3>Academic Support</h3>
+                    <p>We help with your college assignments, essays, and research—delivered on time and tailored to your needs. Just send us your requirements and relax.</p>
+                    <a class="service-btn" href="details-form.html">Request Academic Help</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon"></div>
-                    <h3>Document Services</h3>
-                    <p>Passport/ID renewal, attestation, authentication, and dual citizenship.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <h3>Secure Purchases in Kenya</h3>
+                    <p>Want to buy land, a car, or other items back home? We'll handle the process for you—safely, transparently, and with regular updates, as if you were here yourself.</p>
+                    <a class="service-btn" href="details-form.html">Start a Purchase</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon"></div>
-                    <h3>Consular Support</h3>
-                    <p>Emergency help, evacuation, and consular support for Kenyans abroad.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
-                </div>
-                <!-- 3. Healthcare & Wellness -->
-                <div class="service-card">
-                    <div class="service-icon"></div>
-                    <h3>Telemedicine</h3>
-                    <p>Book virtual doctor consultations for your family in Kenya.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <h3>Document Processing</h3>
+                    <p>From birth certificates to ID cards and passports, we'll stand in line and handle all paperwork for you, keeping you updated every step of the way.</p>
+                    <a class="service-btn" href="details-form.html">Get Documents Processed</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon"></div>
-                    <h3>Mental Health Support</h3>
-                    <p>Access counseling and therapy for diaspora and family.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <h3>Home Errands</h3>
+                    <p>Need someone to check on your family, pay bills, or handle a specific task at home? We're your hands and eyes in Kenya—just tell us what you need.</p>
+                    <a class="service-btn" href="details-form.html">Arrange an Errand</a>
                 </div>
-                <!-- 4. Education & Schoolwork -->
-                <div class="service-card">
-                    <div class="service-icon"></div>
-                    <h3>Assignments Help</h3>
-                    <p>Get help with your school assignments, homework, and coursework.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon"></div>
-                    <h3>Essay Writing</h3>
-                    <p>Professional essay writing and editing for all academic levels.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon"></div>
-                    <h3>Online Exam Assistance</h3>
-                    <p>Support for online tests and exams, ensuring academic integrity and success.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon"></div>
-                    <h3>Research Projects</h3>
-                    <p>Guidance and support for research projects and proposals.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
-                </div>
-                <!-- 5. Property & Construction -->
                 <div class="service-card">
                     <div class="service-icon"></div>
                     <h3>Airbnb Booking</h3>
-                    <p>Book a comfortable Airbnb for your visit, anywhere in Kenya.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <p>Visiting Kenya or need a place for your loved ones? We'll find and book the perfect Airbnb for you, based on your preferences and budget—no stress, no surprises.</p>
+                    <a class="service-btn" href="details-form.html">Book an Airbnb</a>
                 </div>
-                <!-- 6. Travel & Relocation -->
+                <div class="service-card">
+                    <div class="service-icon"></div>
+                    <h3>Airport Transfer</h3>
+                    <p>Arriving in Kenya or need someone picked up? We'll arrange safe, reliable airport transfers so you or your loved ones are always in good hands, day or night.</p>
+                    <a class="service-btn" href="details-form.html">Book Airport Transfer</a>
+                </div>
                 <div class="service-card">
                     <div class="service-icon"></div>
                     <h3>Car Hire</h3>
-                    <p>Hire a car for your stay in Kenya. Wide selection, flexible terms.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <p>Need a car for your stay? We'll arrange a vehicle that fits your needs, from airport pickup to city travel—flexible terms, trusted drivers.</p>
+                    <a class="service-btn" href="details-form.html">Hire a Car</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon"></div>
-                    <h3>Airport Transfers</h3>
-                    <p>Seamless airport pick-up and drop-off for stress-free travel.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <h3>Personalized Assistance</h3>
+                    <p>Have a unique request? Whether it's event planning, family support, or something special, just let us know. We're flexible and ready to help with whatever you need.</p>
+                    <a class="service-btn" href="details-form.html">Request Custom Help</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon"></div>
-                    <h3>Relocation Assistance</h3>
-                    <p>Moving back or visiting? We offer full relocation support.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <h3>Family Visit Coordination</h3>
+                    <p>We'll organize and coordinate family visits for your loved ones—arranging travel, accommodation, and even special surprises, so you can stay close no matter the distance.</p>
+                    <a class="service-btn" href="details-form.html">Coordinate a Visit</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon"></div>
-                    <h3>Event Planning</h3>
-                    <p>Plan and organize events in Kenya, from family to business.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
-                </div>
-                <!-- 7. Business & Job Placement -->
-                <div class="service-card">
-                    <div class="service-icon"></div>
-                    <h3>Business Registration</h3>
-                    <p>Register a business in Kenya from abroad, with full support.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <h3>Bill Payments & Utility Management</h3>
+                    <p>Never worry about missed bills. We'll pay your family's electricity, water, internet, and other utilities on time, and send you receipts and updates.</p>
+                    <a class="service-btn" href="details-form.html">Pay Bills</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon"></div>
-                    <h3>Job Placement</h3>
-                    <p>Find job opportunities in Kenya and abroad, with skills matching.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <h3>Home Maintenance & Repairs</h3>
+                    <p>Need someone to check on your house, supervise repairs, or handle maintenance? We'll visit your property, hire trusted professionals, and send you photos and reports.</p>
+                    <a class="service-btn" href="details-form.html">Request Home Care</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon"></div>
-                    <h3>Mentorship & Networking</h3>
-                    <p>Connect with mentors and professional networks in your field.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
-                </div>
-                <!-- 8. Family & Welfare -->
-                <div class="service-card">
-                    <div class="service-icon"></div>
-                    <h3>Emergency Support</h3>
-                    <p>Bereavement, medical, legal, and urgent family support services.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <h3>Gift & Care Package Delivery</h3>
+                    <p>Want to send a birthday cake, groceries, or a special gift to your family? We'll buy, wrap, and deliver it for you—making every occasion memorable.</p>
+                    <a class="service-btn" href="details-form.html">Send a Gift</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon"></div>
-                    <h3>Philanthropy</h3>
-                    <p>Support local projects, orphanages, and community initiatives.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <h3>Hospital & School Visits</h3>
+                    <p>We'll check in on your loved ones at hospitals or schools, provide updates, and ensure they're well cared for—just like you would if you were home.</p>
+                    <a class="service-btn" href="details-form.html">Arrange a Visit</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon"></div>
-                    <h3>Elderly Care</h3>
-                    <p>Coordinate care and support for elderly family members in Kenya.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <h3>Local Shopping & Errand Running</h3>
+                    <p>Need something bought or picked up in Kenya? From groceries to electronics, we'll shop for you and deliver to your family's doorstep.</p>
+                    <a class="service-btn" href="details-form.html">Request Shopping</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon"></div>
-                    <h3>Childcare & Guardianship</h3>
-                    <p>Find trusted childcare and guardianship services for your children.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
-                </div>
-                <!-- 9. Cultural & Social -->
-                <div class="service-card">
-                    <div class="service-icon"></div>
-                    <h3>Community Events</h3>
-                    <p>Join diaspora meetups, cultural festivals, and social gatherings.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <h3>Virtual Home Tours</h3>
+                    <p>Want to see your property or a new house you're interested in? We'll do a live video tour or send you a detailed walkthrough video.</p>
+                    <a class="service-btn" href="details-form.html">Book a Tour</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon"></div>
-                    <h3>Language & Culture</h3>
-                    <p>Learn Kenyan languages and connect with your heritage.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <h3>Event Attendance on Your Behalf</h3>
+                    <p>Can't make it to a family event, funeral, or meeting? We'll attend, represent you, and share photos, videos, and a full report.</p>
+                    <a class="service-btn" href="details-form.html">Request Representation</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon"></div>
-                    <h3>Kenyan Goods</h3>
-                    <p>Order Kenyan food, crafts, and clothing delivered abroad.</p>
-                    <a class="service-btn" href="details-form.html">Request Details</a>
+                    <h3>Banking & Financial Errands</h3>
+                    <p>We'll help with opening accounts, depositing funds, or handling banking paperwork—securely and confidentially.</p>
+                    <a class="service-btn" href="details-form.html">Get Financial Help</a>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon"></div>
+                    <h3>Healthcare Appointment Booking</h3>
+                    <p>We'll book doctor, dentist, or specialist appointments for your family, and even arrange transport if needed.</p>
+                    <a class="service-btn" href="details-form.html">Book Healthcare</a>
                 </div>
             </div>
         </section>
